Fixed visibility and off screen text on the experience page

--- a/experience/style.css
+++ b/experience/style.css
@@ -7,17 +7,27 @@ html, body {
 }
 
 ::selection {
-    background-color: #1E28416F;
+    background-color: #354366af;
 }
 
-.img-wrap {
+.content {
     position: absolute;
-    z-index: -1;
+    width: 100%;
     height: 300%;
     margin: 0;
-    user-select: none;
-    width: 100%;
     overflow: hidden;
+}
+
+.content::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, transparent 0%,rgba(0, 0, 0, 0.5) 100%);
+    background: -webkit-linear-gradient(top, transparent 0%,rgba(0, 0, 0, 0.5) 100%);
+    background: -moz-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.5) 100%);
+    background: -o-linear-gradient(top, transparent 0%,rgba(0, 0, 0, 0.5) 100%);
+    background: -ms-linear-gradient(top, transparent 0%,rgba(0, 0, 0, 0.5) 100%);
 }
 
 .bg-img {
@@ -28,25 +38,32 @@ html, body {
     left: -2.5%;
     object-fit: cover;
     object-position: 50% 50%;
-    filter: brightness(50%);
+    filter: brightness(60%);
+    -webkit-filter: brightness(60%);
+    -moz-filter: brightness(60%);
+    -o-filter: brightness(60%);
+    -ms-filter: brightness(60%);
+    z-index: -1;
+    user-select: none;
 }
 
 .timeline {
     --timeline-color: #1BB8E4;
     background-color: var(--timeline-color);
-    height: 205%;
+    height: calc(85% - 20rem);
     width: .2rem;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
     position: absolute;
-    top: 300px;
+    top: 15%;
     padding: 0;
 }
 
 .point {
-    width: 45ch;
+    width: calc(47vw - 4rem);
+    max-width: 45ch;
     margin-left: 4rem;
     color: white;
     list-style: none;
