--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 ::selection {
-    background-color: #1E28416F;
+    background-color: #354366af;
 }
 
 .fade-in {
